--- a/index.html
+++ b/index.html
@@ -500,3 +500,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+<a href="mailto:adrian.s.davis@gmail.com" class="underline hover:text-white">Send Feedback</a>
